limit page width, fix z-index, add link in faq

--- a/css/info.css
+++ b/css/info.css
@@ -132,6 +132,8 @@ a:hover {
 .nonoverlay {
     z-index: 100 !important;
     position: relative;
+    max-width:1440px;
+    display:inline-block;
 }
 
 a:active,
